vendor/pin-project-1.0.7/tests/ui/pin_project/import_unnamed.stderr
error[E0432]: unresolved import `crate::pub_::__DefaultProjection`
  --> $DIR/import_unnamed.rs:16:9
   |
16 |     use crate::pub_::__DefaultProjection; //~ ERROR E0432
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `__DefaultProjection` in `pub_`

error[E0432]: unresolved import `crate::pub_::__DefaultProjectionRef`
  --> $DIR/import_unnamed.rs:18:9
   |
18 |     use crate::pub_::__DefaultProjectionRef; //~ ERROR E0432
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `__DefaultProjectionRef` in `pub_`

error[E0432]: unresolved import `crate::pub_::__ReplaceProjection`
  --> $DIR/import_unnamed.rs:20:9
   |
20 |     use crate::pub_::__ReplaceProjection; //~ ERROR E0432
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `__ReplaceProjection` in `pub_`

error[E0432]: unresolved import `crate::pub_::__ReplaceProjectionOwned`
  --> $DIR/import_unnamed.rs:22:9
   |
22 |     use crate::pub_::__ReplaceProjectionOwned; //~ ERROR E0432
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `__ReplaceProjectionOwned` in `pub_`

error[E0432]: unresolved import `crate::pub_::__ReplaceProjectionRef`
  --> $DIR/import_unnamed.rs:24:9
   |
24 |     use crate::pub_::__ReplaceProjectionRef; //~ ERROR E0432
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `__ReplaceProjectionRef` in `pub_`
